Fix canvas plot layout issues
The canvas exceeded the parent bounds.
This is fixed now by wrapping it in a div.

Also updated title of page.

--- a/www/src/App.css
+++ b/www/src/App.css
@@ -21,6 +21,15 @@ h3 {
 	text-align: center;
 }
 
+.plot-container {
+  margin: 0 auto;
+  width: 100%;
+}
+
+.plot {
+	width: 100%;
+}
+
 .Label {
 	text-align: left;
 }
